updated contact section

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
       <nav class="navbar">
         <h1>Roopak</h1>
         <ul class="nav-items">
-          <li><a href="">About Me</a></li>
           <li><a href="">Education</a></li>
-          <li><a href="">Skills</a></li>
           <li><a href="">Experiences</a></li>
+          <li><a href="">Skills</a></li>
           <li><a href="">Projects</a></li>
           <li><a href="">Contact Me</a></li>
         </ul>
@@ -121,7 +120,18 @@
 
     <!-- contact-page -->
     <section class="contact-page">
-      <h1>Contact Me</h1>
+      <a href="mailto:roopaksenthilkumar@gmail.com" class="mail-button"
+        ><h1>Mail Me</h1></a
+      >
+      <div class="social-buttons">
+        <a href="https://github.com/RoopakCS"><button>GitHub</button></a>
+        <a href="https://www.linkedin.com/in/roopakcs/"
+          ><button>LinkedIn</button></a
+        >
+        <a href="https://www.youtube.com/@roopaksenthilkumar"
+          ><button>Youtube</button></a
+        >
+      </div>
     </section>
   </body>
 </html>
