--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
       <nav class="navbar">
         <h1>Roopak</h1>
         <ul class="nav-items">
-          <li><a href="">Education</a></li>
-          <li><a href="">Experiences</a></li>
-          <li><a href="">Skills</a></li>
-          <li><a href="">Projects</a></li>
-          <li><a href="">Contact Me</a></li>
+          <li><a href="#education">Education</a></li>
+          <li><a href="#education">Experiences</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#skills">Projects</a></li>
+          <li><a href="#contact">Contact Me</a></li>
         </ul>
       </nav>
 
       <!-- homepage -->
-      <div class="home-container">
+      <div class="home-container" >
         <div class="profile-picture">
           <img
             src="images/my-photo.jpg"
@@ -44,7 +44,7 @@
     </section>
 
     <!-- education section  -->
-    <section class="education-page">
+    <section class="education-page" id="education">
       <h1>Education</h1>
       <div class="wrapper">
         <div class="box">
@@ -66,7 +66,7 @@
     </section>
 
     <!-- skills section -->
-    <section class="skills-page">
+    <section class="skills-page" id="skills">
       <h1>Skills</h1>
       <div class="skills-wrapper">
         <div class="bubble">
@@ -119,7 +119,7 @@
     </section>
 
     <!-- contact-page -->
-    <section class="contact-page">
+    <section class="contact-page" id="contact">
       <a href="mailto:roopaksenthilkumar@gmail.com" class="mail-button"
         ><h1>Mail Me</h1></a
       >
