fixed the overflow in skills section and added some responsibility

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </nav>
 
       <!-- homepage -->
-      <div class="home-container" >
+      <div class="home-container">
         <div class="profile-picture">
           <img
             src="images/my-photo.jpg"
@@ -57,11 +57,11 @@
           <p>2018 - 2023</p>
         </div>
       </div>
-      <h1>Experience</h1>
+      <!-- <h1>Experience</h1>
       <div class="box">
         <h3>CodeByte</h3>
         <p>Mentee</p>
-        <p>Jan 2025 - Present</p>
+        <p>Jan 2025 - Present</p> -->
       </div>
     </section>
 
@@ -97,7 +97,7 @@
           <p>ExpressJS</p>
         </div>
         <div class="bubble">
-          <p>css</p>
+          <p>CSS</p>
         </div>
       </div>
       <h1>Projects</h1>
@@ -108,12 +108,14 @@
             A simple and interactive website that allows users to browse book
             names and covers, mark favorites, and manage a 'Read Later' list
           </p>
-          <button
-            onclick="window.location.href='https://github.com/RoopakCS/book-shelf/'"
-            class="project-button"
-          >
-            View Project
-          </button>
+          <div class="button-wrapper">
+            <a href="https://github.com/RoopakCS/book-shelf/" target="_blank">
+              <button class="primary-button">GitHub</button>
+            </a>
+            <a href="https://roopakcs.github.io/book-shelf/" target="_blank">
+              <button class="primary-button">Live</button>
+            </a>
+          </div>
         </div>
       </div>
     </section>
@@ -124,12 +126,12 @@
         ><h1>Mail Me</h1></a
       >
       <div class="social-buttons">
-        <a href="https://github.com/RoopakCS"><button>GitHub</button></a>
-        <a href="https://www.linkedin.com/in/roopakcs/"
-          ><button>LinkedIn</button></a
+        <a href="https://github.com/RoopakCS" target="_blank"><button class="primary-button">GitHub</button></a>
+        <a href="https://www.linkedin.com/in/roopakcs/" target="_blank"
+          ><button class="primary-button">LinkedIn</button></a
         >
-        <a href="https://www.youtube.com/@roopaksenthilkumar"
-          ><button>Youtube</button></a
+        <a href="https://www.youtube.com/@roopaksenthilkumar" target="_blank"
+          ><button class="primary-button">Youtube</button></a
         >
       </div>
     </section>
